# uada-contracts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
report/: Makefile  main.tex  references.bib
test/onchain/: test_interval.py
uada/: build.py  submit_ref_script.py
uada/offchain/: init_uada_params.py  init_uada_stake_key.py  mint_uada.py  move_to_staked.py  move_to_trash.py  util.py  withdraw_or_extend_uada_partial.py  withdraw_uada.py
uada/onchain/: one_shot_nft.py  parameter_auth_nft.py  uada.py  util.py
uada/onchain/utils/: ext_fraction.py
uada/utils/: __init__.py  contracts.py  from_script_context.py  keys.py  network.py  to_script_context.py
